--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.9.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "api": "json-server db.json -p 3333 --delay 1500",
     "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,9 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-redux": "^7.2.8",
-    "redux": "^4.1.2"
   }
 }
